--- a/index.html
+++ b/index.html
@@ -3399,7 +3399,7 @@ specified format.<br>If you want it to go back to the default settings, run the 
 	<h6 style="float: right;" class="topText">Back to top&nbsp;</h6>
 </div>
 
-<h2 id="clrOptions"><u> xToName Color Scheme Options </u></h2>
+<h2 id="clrNameInfo"><u> xToName Color Scheme Options </u></h2>
 <p>For the xToName functions, the second parameter allows for a "colorScheme". Of the 4 choices for schemes, pick the one which suits your needs the best. </p>
 <p>Below, I list a description of all 4 and your options for the "colorScheme" parameter.</p>
 <p>Note that, for each of the color schemes, each level builds upon the previous; in addition, colors #1 takes 3 from grayscale, #2 takes 9 from grayscale, and #3 takes the remaining 7 from grayscale.</p>
