--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <title>Functions+ Help Document</title>
 <link href="FPlus-Theme.css" rel="stylesheet" media="screen">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+<script src="http://counter.heroku.com/javascripts/count.js" type="text/javascript"></script>	
+<div>Hit Count: <span id = "count"></span><div>
 <script>
 $(document).ready(function() {
     function close_accordion_section() {
