Remove time-relative explanations
e.g. the idea for this came to me "almost a year ago"

--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
 <title>Functions+ Help Document</title>
 <link href="FPlus-Theme.css" rel="stylesheet" media="screen">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-<script src="http://counter.heroku.com/javascripts/count.js" type="text/javascript"></script>	
-<div>Hit Count: <span id = "count"></span><div>
 <script>
 $(document).ready(function() {
     function close_accordion_section() {
@@ -41,15 +39,9 @@ function switchPage() {
 <body>
 <div id="wmd-preview" class="wmd-preview wmd-preview-full-reader"><div class="md-section-divider"></div><div class="md-section-divider"></div><h1 data-anchor-id="vmg4">Functions+ Help Document</h1><p data-anchor-id="63nq"><code>Requires latest version (v3.5.3+) - Made by /u/shirtandtieler</code></p>
 <pre data-anchor-id="pla5"><code>
-The idea for this script came to me almost a year ago - I wanted to create a way to seamlessly integrate custom 
+My motivation in creating this library was wanting to create a way to seamlessly integrate custom 
 functions with AutoTouch. After <i>many</i> hours of hard work, I have created a whole spectrum of different 
 useful functions. If you're familiar with Python, any similar naming conventions are no coincidence :)
-
-Note that there's still a bit to be done for this help document. I still need to...
-	> Colorize the examples
-	> Fill out the color-format-conversion functions that have missing info
-And if there's any obvious inconsistencies that I missed, please feel free to tell me about them,
-	as making this doc was very tedious and my patience started to run dry at the end :P
 
 Enjoy! (And contact me on reddit if you have any questions/problems/suggestions)
 </code></pre>
